# MCDReforged

./: .gitignore  .readthedocs.yml  MANIFEST.in  MCDReforged.py  README.md  README.☆  README_cn.md  README_ja_jp.md  README_zh.md  README_zh_cn.md  README_zh_tw.md  a.py  config.yml  crowdin.yml  data.txt  make_release.bat  mypy.ini  permission.yml  pyproject.toml  readme.md  requirement.txt  requirements.dev.txt  requirements.txt  setup.py  zh_tw.yml.lnk
.devcontainer/: Dockerfile  devcontainer.json
config/: data.txt
doc/: FAQ_cn.md  plugin.md  plugin_cn.md  readme_cn.md  rtext.md  rtext_cn.md  rtext_exclusive_cn.md  utils.md  utils_cn.md
docker/: Dockerfile
docs/: .gitignore  README.md  README_cn.md  conf.py  index.rst  plugin.md  plugin_cn.md  readme_cn.md  requirements.txt
docs_prev/: plugin.md  plugin_cn.md  utils.md  utils_cn.md
lang/: en_us.yml  zh_cn.yml
logo/: README.md  make_logo.py  requirements.txt
mcdr/: config.py  constant.py  info.py  language_manager.py  logger.py  mcdr_server.py  parser_manager.py  permission_manager.py  rcon_manager.py  reactor_manager.py  rtext.py  server.py  server_interface.py  server_status.py  tool.py  update_helper.py
mcdreforged/: __init__.py  __main__.py  config.py  constant.py  info.py  info_reactor_manager.py  language_manager.py  logger.py  mcdr_boostrap.py  mcdr_config.py  mcdr_entrypoint.py  mcdr_server.py  mcdr_server_args.py  mcdr_state.py  parser_manager.py  permission_manager.py  reactor_manager.py  rtext.py  server_interface.py  server_status.py  translation_manager.py  update_helper.py
plugins/: ExamplePlugin.py  PlayerInfoAPI.py  SamplePlugin.py  calculator.py  sample_plugin.py  test.py  warp.py  (+1 more)
(+641 files in other folders)
