[build-system]
# https://setuptools.pypa.io/en/latest/userguide/index.html
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

name = "mcdreforged"
description = "A rewritten version of MCDaemon, a python tool to control your Minecraft server"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">= 3.9"
authors = [
    { name = "Fallen_Breath" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
mcdreforged = "mcdreforged.mcdr_entrypoint:entrypoint"

[project.urls]
Documentation = "https://docs.mcdreforged.com"
Homepage = "https://github.com/MCDReforged/MCDReforged"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "mcdreforged.constants.core_constant.VERSION_PYPI" }
readme = { file = ["README.md"], content-type = "text/markdown" }
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements.dev.txt"] }

[tool.setuptools.packages.find]
include = ["mcdreforged*"]
namespaces = false
